--- a/flappybird.html
+++ b/flappybird.html
@@ -79,7 +79,7 @@
 				document.body.appendChild( container );
 
 				//
-				Graphics.init( container );
+				Graphics.init( container, bird);
 				Controller.init();
 
 				window.addEventListener( 'resize', Graphics.onWindowResize, false );
