fix pillar x-axis position, make pillars have the same upper and lower bound

--- a/flappybird.html
+++ b/flappybird.html
@@ -80,7 +80,7 @@
 
 				//
 				Controller.init();
-				Graphics.init( container, bird);
+				Graphics.init( container, bird, pillars);
 
 
 				window.addEventListener( 'resize', Graphics.onWindowResize, false );
