can turn on/off debug info

--- a/flappybird.html
+++ b/flappybird.html
@@ -190,7 +190,7 @@
 						state = event.keyCode - 48;
 						break;
 					case 68: 	//d: switch debug mode
-						//Graphics.switchDebug();
+						Graphics.switchDebug();
 						break;
 				}
 			}
