change pillar model

--- a/flappybird.html
+++ b/flappybird.html
@@ -44,6 +44,7 @@
 		
 		<script src="three.js/three.min.js"></script>
 		<script src="js/Detector.js"></script>
+		<script src="js/loaders/ColladaLoader.js"></script>
 		<script src="graphics.js"></script>
 		<script src="learning.js"></script>		
 		<script src="controller.js"></script>		
