--- a/flappybird.html
+++ b/flappybird.html
@@ -59,7 +59,8 @@
 			var state = STATUS.MENU;	//state of the game(0: menu, 1: game, 2: learning, 3: showtime)			
 			var mouseX = 0, mouseY = 0, generation = 0, interval = INTERVAL;
 			
-			
+			var elapseTime = 0;
+
 			var windowHalfX = window.innerWidth / 2;
 			var windowHalfY = window.innerHeight / 2;
 
@@ -90,7 +91,8 @@
 				}
 				requestAnimationFrame(animateLoopTime);
 				var delta = clock.getDelta();
-				var elapseTime = clock.getElapsedTime();
+				elapseTime += delta;
+				//alert(delta + '\n' + elapseTime);
 				animate(delta, elapseTime);
 			}
 /*
@@ -112,11 +114,11 @@
 
 			function animateLoopFor() { // No response
 				var delta = 0.0166666;
-				var elapseTime = 0;
 				while(true) {		
 					elapseTime += delta;
 					animate(delta, elapseTime);
 					if (isSwitchToNormalSpeed()) {
+						clock.getDelta();
 						animateLoopTime();
 						console.log('animateLoopFor terminated');
 						break;
