--- a/flappybird.html
+++ b/flappybird.html
@@ -55,11 +55,11 @@
 			var clock = new THREE.Clock();
 			var STATUS = {};
 			STATUS.MENU = 0, STATUS.GAME = 1, STATUS.LEARNING = 2, STATUS.SHOWTIME = 3;
-			var GENERATION = 10000, SCORE = 200, INTERVAL = 0.3;	//Threshold for quick training
+			var GENERATION = 10000, SCORE = 200, INTERVAL = 0;	//Threshold for quick training
 			var state = STATUS.MENU;	//state of the game(0: menu, 1: game, 2: learning, 3: showtime)			
 			var mouseX = 0, mouseY = 0, generation = 0, interval = INTERVAL;
 			
-			var elapseTime = 0;
+			var elapseTime;
 
 			var windowHalfX = window.innerWidth / 2;
 			var windowHalfY = window.innerHeight / 2;
@@ -70,6 +70,7 @@
 			animateLoopTime();			
 
 			function init() {
+				elapseTime = 0;
 				container = document.createElement( 'div' );
 				document.body.appendChild( container );
 				Controller.init();
@@ -95,11 +96,15 @@
 				//alert(delta + '\n' + elapseTime);
 				animate(delta, elapseTime);
 			}
-/*
+
 			function animateLoop2() {
 				var delta = 0.0166666;
-				var elapseTime = 0;
 				function myTimer() {
+					if (!isSwitchToNormalSpeed()) {
+						animateLoopFor();
+						console.log('animateLoopTime terminated');
+						return;
+					}
 					elapseTime += delta;
 					animate(delta, elapseTime);
 					//alert(delta.toFixed(2) + ", " + elapseTime.toFixed(2));
@@ -107,7 +112,7 @@
 				}
 				myTimer(delta, elapseTime);
 			}
-*/
+
 			function isSwitchToNormalSpeed() {
 				return generation >= GENERATION || maxScore >= SCORE || state != STATUS.LEARNING;
 			}
