--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>CS275 by jiangong01</title>
+    <title>CS275 Justin B. Bird</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>CS275</h1>
+          <h1>CS275 Justin B. Bird</h1>
           <h2></h2>
         </header>
 
@@ -31,22 +31,21 @@
         <hr>
 
         <section id="main_content">
-          <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<h3>
+<a name="team" class="anchor" href="#team"><span class="octicon octicon-link"></span></a>Team</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Hang Qi, Jian Gong, Lunbo Xu</p>
 
 <h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a name="introduction" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Introduction</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<div>
+  <img src="images/ScreenShot.png" alt="screen shot" style="width:500px;display: block;margin: 20px auto">
+</div>
+
+<p>This paper presents a method to teach the bird how to fly among objects without collision in a game. The game is based on a very popular mobile game called Flappy Bird. We implemeted it in 3D with WebGL, making it easy for access with browsers. The bird has two different perception models, with fovy, or without fovy but has shorttime memory. In both models, the perception state is represented by 16-element array, consisting of coordinates of two pillars in front of the bird. Then we used reinforcement learning to teach the bird how to make correct actions according to current perception state. The results show that the model with fovy has much shorter traning time, while the other model enbales the bird to fly over a longer distance.</p>
+
+
 
 <h3>
 <a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
