--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>CS275</title>
+    <title>CS 275 Project</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/jiangong01/cs275">View on GitHub</a>
 
-          <h1 id="project_title">CS275</h1>
+          <h1 id="project_title">CS 275 Project: <br>3D Flappy Bird with <br>Reinforcement Learning</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
@@ -32,47 +32,34 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
-<h3>
-<a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Team</h3>
-<p>Hang Qi, Jian Gong, Lunbo Xu</p>
+<h3><a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Team</h3>
+<pre>
+Hang Qi		hangqi@cs.ucla.edu
+Jian Gong	jiangong@cs.ucla.edu
+Lunbo Xu	lunbo_xu@cs.ucla.edu
+</pre>
 
-        <h3>
-<a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Introduction</h3>
+<h3><a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Instructor</h3>
+<p>Prof. <a href="http://terzopoulos.com/">Demetri Terzopoulos</a></p>
+
+<h3><a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Report</h3>
+<p>The official report: <a href="pdf/CS_275_Presentation.pdf">[pdf]</a></p>
+<p>The presentation: <a href="pdf/CS_275_Presentation.pdf">[ppt]</a></p>
+
+<h3><a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Introduction</h3>
 
 <div>
   <img src="images/ScreenShot.png" alt="screen shot" style="width:500px;display: block;margin: 20px auto">
 </div>
 
-<p>In this work, we present a reinforcement learning method to allow a artificial bird to survive in a randomly generated environment without collision with any obstacles by deciding when to flap the wings. The setting is based on a very popular mobile game called \textit{FlappyBird}. We implemented it in 3D with WebGL, making it easy for public access and experiments with browsers. The bird is given two different perception models: (1) instant fovy, (2) fovy with short-term memory. In both models, the perception state is represented by a $16\times 1$ vector, consisting of coordinates of the two pillars in front of the bird. A reinforcement learning algorithm Q-learning is used to learn a decision policy, powered by which the bird will be able to survive by repeatedly deciding which action to perform given its current perception state. The experiments show our Q-learning algorithm allows the bird to survive for more than 200 pillars.</p>
+<p>
+We present a reinforcement learning method to allow a artificial bird to survive in a randomly generated environment without collision with any obstacles by deciding when to flap the wings. The setting is based on a very popular mobile game called <a href="http://en.wikipedia.org/wiki/Flappy_Bird">Flappy Bird</a>. We implemented it in 3D with WebGL, making it easy for public access and experiments with browsers. <br><br> 
+The bird is given two different perception models: (1) instant fovy, (2) fovy with short-term memory. In both models, the perception state is represented by a 16×1 vector, consisting of coordinates of the key points of two pillars in front of the bird. A reinforcement learning algorithm, Q-learning, is used to learn a decision policy, powered by which the bird will be able to survive by repeatedly deciding which action to perform given its current perception state. The experiments show that our Q-learning algorithm allows the bird to survive for more than 200 pillars. <br><br>
+Please read the <a href="pdf/CS_275_Presentation.pdf">official report</a> for details if you are interested.
+</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
+</section>
+</div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
@@ -81,8 +68,6 @@ $ git checkout gh-pages
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-
     
-
   </body>
 </html>
