--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@ Lunbo Xu	lunbo_xu@cs.ucla.edu
 
 <h3><a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Introduction</h3>
 
-<div>
-  <img src="images/ScreenShot.png" alt="screen shot" style="width:500px;display: block;margin: 20px auto">
-</div>
+<iframe style="display: block;margin: 20px auto" width="560" height="315" src="http://www.youtube.com/embed/9yIox3eKz40" frameborder="0" allowfullscreen></iframe>
 
 <p>
 We present a reinforcement learning method to allow a artificial bird to survive in a randomly generated environment without collision with any obstacles by deciding when to flap the wings. The setting is based on a very popular mobile game called <a href="http://en.wikipedia.org/wiki/Flappy_Bird">Flappy Bird</a>. We implemented it in 3D with WebGL, making it easy for public access and experiments with browsers. <br><br> 
