--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ Lunbo Xu	lunbo_xu@cs.ucla.edu
 <p>Prof. <a href="http://terzopoulos.com/">Demetri Terzopoulos</a></p>
 
 <h3><a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Report</h3>
-<p>The official report: <a href="pdf/CS_275_Presentation.pdf">[pdf]</a></p>
-<p>The presentation: <a href="pdf/CS_275_Presentation.pdf">[ppt]</a></p>
+<p>The official report: <a href="pdf/CS_275_Report.pdf">[pdf]</a></p>
+<p>The presentation: <a href="pdf/CS_275_Presentation.pdf">[pdf]</a></p>
 
 <h3><a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Introduction</h3>
 
@@ -55,7 +55,7 @@ Lunbo Xu	lunbo_xu@cs.ucla.edu
 <p>
 We present a reinforcement learning method to allow a artificial bird to survive in a randomly generated environment without collision with any obstacles by deciding when to flap the wings. The setting is based on a very popular mobile game called <a href="http://en.wikipedia.org/wiki/Flappy_Bird">Flappy Bird</a>. We implemented it in 3D with WebGL, making it easy for public access and experiments with browsers. <br><br> 
 The bird is given two different perception models: (1) instant fovy, (2) fovy with short-term memory. In both models, the perception state is represented by a 16×1 vector, consisting of coordinates of the key points of two pillars in front of the bird. A reinforcement learning algorithm, Q-learning, is used to learn a decision policy, powered by which the bird will be able to survive by repeatedly deciding which action to perform given its current perception state. The experiments show that our Q-learning algorithm allows the bird to survive for more than 200 pillars. <br><br>
-Please read the <a href="pdf/CS_275_Presentation.pdf">official report</a> for details if you are interested.
+Please read the <a href="pdf/CS_275_Report.pdf">official report</a> for details if you are interested.
 </p>
 
 </section>
